--- a/app/src/main/res/layout/bottom_navi.xml
+++ b/app/src/main/res/layout/bottom_navi.xml
@@ -6,7 +6,7 @@
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottomNavigation"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:background="#ffffff"
