--- a/app/src/main/res/layout/item_khoan_thu.xml
+++ b/app/src/main/res/layout/item_khoan_thu.xml
@@ -1,71 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="5dp"
-    app:cardCornerRadius="5dp"
-    android:orientation="vertical">
+    android:layout_margin="10dp"
+    android:orientation="vertical"
+    app:cardCornerRadius="5dp">
+
     <ImageView
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:src="@drawable/doanhthu"/>
+        android:src="@drawable/doanhthu" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="10dp">
+
         <ImageView
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:src="@drawable/doanhthu"/>
+            android:src="@drawable/doanhthu"
+            android:id="@+id/imgKhoanThu"/>
+
         <LinearLayout
             android:layout_width="170dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="15dp"
             android:orientation="vertical">
+
             <TextView
+                android:id="@+id/tvTenKhoanThu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tiền lương"
-                android:id="@+id/tvTenKhoanThu"/>
+                android:text="Tiền lương" />
+
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/tvSoTienThu"
-                android:text="3000000 vnd"/>
+                android:inputType="number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="3000000 vnd" />
 
         </LinearLayout>
+
         <LinearLayout
-            android:layout_gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginLeft="20dp">
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/xoa"
-                android:id="@+id/xoaKhoanThu"/>
+                android:layout_marginLeft="20dp"
+                android:orientation="horizontal">
+
                 <ImageView
+                    android:id="@+id/xoaKhoanThu"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:src="@drawable/sua"
+                    android:src="@drawable/xoa" />
+
+                <ImageView
                     android:id="@+id/suaKhoanThu"
-                    android:layout_marginLeft="10dp"/>
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="10dp"
+                    android:src="@drawable/sua" />
             </LinearLayout>
+
             <TextView
+                android:id="@+id/tvNgayThu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="10/12/2018"
-                android:id="@+id/tvNgayThu"
                 android:layout_marginLeft="15dp"
-                android:layout_marginTop="10dp"/>
+                android:layout_marginTop="10dp"
+                android:inputType="number"
+                android:text="10/12/2018" />
         </LinearLayout>
     </LinearLayout>
 
