--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".LoginActivity">
+    android:layout_margin="20dp"
+    tools:context=".activity.LoginActivity">
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="150dp"
