--- a/app/src/main/res/layout/activity_thong_ke_fragment.xml
+++ b/app/src/main/res/layout/activity_thong_ke_fragment.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:layout_marginTop="60dp"
     android:orientation="vertical"
+    android:padding="10dp"
     tools:context=".ThongKeFragment">
 
     <LinearLayout
@@ -19,6 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Tât cả"
+            android:id="@+id/TatCa"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="18sp" />
@@ -28,6 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Tháng"
+            android:id="@+id/Thang"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="18sp" />
@@ -37,9 +40,48 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Năm"
+            android:id="@+id/Nam"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="18sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="Tháng"
+            android:id="@+id/tvThang"
+            android:textSize="18sp" />
+
+        <Spinner
+            android:id="@+id/spThang"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp">
+
+        </Spinner>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="Năm"
+            android:id="@+id/tvNam"
+            android:textSize="18sp" />
+
+        <Spinner
+            android:id="@+id/spNam"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp">
+
+        </Spinner>
 
     </LinearLayout>
     <TextView
@@ -53,25 +95,31 @@
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="#ec3939"
         android:id="@+id/DoanhThuTK"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:text="Chi tiêu :"
+
+        android:layout_marginTop="10dp"
         android:background="#dedada"/>
     <TextView
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="#ec3939"
         android:id="@+id/ChiTieuTK"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:text="Cân đối :"
+        android:layout_marginTop="10dp"
         android:background="#dedada"/>
     <TextView
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="#ec3939"
         android:id="@+id/CanDoiTK"/>
 </LinearLayout>
