--- a/app/src/main/res/layout/dialog_them.xml
+++ b/app/src/main/res/layout/dialog_them.xml
@@ -37,6 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="3"
             android:hint="nhập"
+            android:inputType="number"
             android:id="@+id/edSoTienThem"/>
     </LinearLayout>
     <LinearLayout
