--- a/app/src/main/res/layout/item_khoan_chi.xml
+++ b/app/src/main/res/layout/item_khoan_chi.xml
@@ -5,33 +5,42 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp"
     app:cardCornerRadius="5dp"
+    android:layout_marginTop="-5dp"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:layout_height="85dp"
+        android:padding="5dp"
         android:orientation="horizontal">
         <ImageView
             android:layout_width="70dp"
             android:layout_height="70dp"
+            android:id="@+id/imgKhoanChi"
+            android:layout_marginLeft="5dp"
             android:src="@drawable/chitieu1"/>
         <LinearLayout
-            android:layout_width="170dp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="15dp"
             android:orientation="vertical">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Tiền nhà"
+                android:textColor="#d32f2f"
+                android:textSize="18sp"
                 android:id="@+id/tvTenKhoanChi"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tvSoTienChi"
+                android:textSize="18sp"
+                android:textColor="#d32f2f"
                 android:text="1000000 vnd"/>
+
 
         </LinearLayout>
         <LinearLayout
@@ -43,17 +52,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginLeft="20dp">
+                android:layout_marginLeft="10dp">
             <ImageView
-                android:layout_width="30dp"
+                android:layout_width="25dp"
                 android:layout_height="30dp"
                 android:src="@drawable/xoa"
-                android:id="@+id/xoaKhoanThu"/>
+                android:id="@+id/xoaKhoanChi"/>
                 <ImageView
-                    android:layout_width="30dp"
+                    android:layout_width="25dp"
                     android:layout_height="30dp"
                     android:src="@drawable/sua"
-                    android:id="@+id/suaKhoanThu"
+                    android:id="@+id/suaKhoanChi"
                     android:layout_marginLeft="10dp"/>
             </LinearLayout>
             <TextView
@@ -61,7 +70,8 @@
                 android:layout_height="wrap_content"
                 android:text="10/12/2018"
                 android:id="@+id/tvNgayChi"
-                android:layout_marginLeft="15dp"
+                android:textSize="14sp"
+                android:textColor="#d32f2f"
                 android:layout_marginTop="10dp"/>
         </LinearLayout>
     </LinearLayout>
