--- a/app/src/main/res/layout/item_khoan_thu.xml
+++ b/app/src/main/res/layout/item_khoan_thu.xml
@@ -3,29 +3,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
+    android:layout_margin="5dp"
+    android:layout_marginTop="-5dp"
     android:orientation="vertical"
     app:cardCornerRadius="5dp">
 
-    <ImageView
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:src="@drawable/doanhthu" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="85dp"
         android:orientation="horizontal"
-        android:padding="10dp">
+        android:padding="5dp">
 
         <ImageView
             android:layout_width="70dp"
             android:layout_height="70dp"
+            android:layout_marginLeft="5dp"
             android:src="@drawable/doanhthu"
             android:id="@+id/imgKhoanThu"/>
 
         <LinearLayout
-            android:layout_width="170dp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="15dp"
@@ -35,14 +33,18 @@
                 android:id="@+id/tvTenKhoanThu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:textColor="#d32f2f"
                 android:text="Tiền lương" />
 
             <TextView
                 android:id="@+id/tvSoTienThu"
                 android:inputType="number"
+                android:textSize="18sp"
+                android:textColor="#d32f2f"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="3000000 vnd" />
+                android:text="3000000 vnd"/>
 
         </LinearLayout>
 
@@ -55,18 +57,18 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="10dp"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/xoaKhoanThu"
-                    android:layout_width="30dp"
+                    android:layout_width="25dp"
                     android:layout_height="30dp"
                     android:src="@drawable/xoa" />
 
                 <ImageView
                     android:id="@+id/suaKhoanThu"
-                    android:layout_width="30dp"
+                    android:layout_width="25dp"
                     android:layout_height="30dp"
                     android:layout_marginLeft="10dp"
                     android:src="@drawable/sua" />
@@ -76,9 +78,10 @@
                 android:id="@+id/tvNgayThu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
                 android:layout_marginTop="10dp"
-                android:inputType="number"
+                android:inputType="date"
+                android:textSize="14dp"
+                android:textColor="#d32f2f"
                 android:text="10/12/2018" />
         </LinearLayout>
     </LinearLayout>
