--- a/app/src/main/res/layout/gioi_thieu.xml
+++ b/app/src/main/res/layout/gioi_thieu.xml
@@ -3,15 +3,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="150dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="25dp"
+        android:src="@drawable/logo1" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="50dp">
-
+        android:padding="15dp"
+        android:layout_marginTop="20dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/gioithieu" />
+            android:layout_marginTop="10dp"
+            android:text="@string/gioithieu"/>
     </ScrollView>
 </LinearLayout>
