--- a/app/src/main/res/layout/dialog_sua.xml
+++ b/app/src/main/res/layout/dialog_sua.xml
@@ -14,11 +14,13 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Tên:"
+
             android:id="@+id/tvTenSuaThu"/>
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="3"
+            android:enabled="false"
             android:hint="nhập"
             android:id="@+id/edTenSuaThu"/>
     </LinearLayout>
@@ -36,6 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="3"
+            android:inputType="number"
             android:hint="nhập"
             android:id="@+id/edSuaSoTienThu"/>
     </LinearLayout>
