--- a/app/src/main/res/layout/dialog_sua.xml
+++ b/app/src/main/res/layout/dialog_sua.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:padding="10dp"
@@ -57,6 +58,7 @@
             android:id="@+id/edSuaNgayThu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:enabled="false"
             android:layout_weight="2" />
         <ImageView
             android:layout_width="30dp"
