--- a/app/src/main/res/layout/dialog_them_thu.xml
+++ b/app/src/main/res/layout/dialog_them_thu.xml
@@ -43,17 +43,23 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="horizontal"
+        android:gravity="center"
         android:layout_height="wrap_content">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.75"
+            android:layout_weight="0.5"
             android:text="Ngày"
             android:id="@+id/tvNgayThem"/>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="wrap_content">
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
+            android:enabled="false"
             android:id="@+id/edNgayThemThu"/>
         <ImageView
             android:layout_width="30dp"
@@ -64,5 +70,6 @@
             android:onClick="datePicker"
             android:inputType="number"
             android:id="@+id/imgLichThu"/>
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
